--- a/.github/workflows/train.yaml
+++ b/.github/workflows/train.yaml
@@ -60,8 +60,8 @@ jobs:
           -H "Content-Type: application/json" \
           -d '{
                   "input": {
-                      "instance_prompt": "a photo of a ${{ inputs.prompt-identifier }} cat",
-                      "class_prompt": "a photo of a cat",
+                      "instance_prompt": "a print of a ${{ inputs.prompt-identifier }} tarot card",
+                      "class_prompt": "a print of a tarot card",
                       "instance_data": "${{ steps.upload-training-data.outputs.INSTANCE_DATA_URL }}",
                       "max_train_steps": ${{ inputs.max-train-steps }}
                   },
